@@ -157,69 +157,71 @@ Each variable definition below contains one or more examples.
 <td><a href="#PENDING_WHITELIST_APPEND">PENDING_WHITELIST_APPEND</a></td>
 </tr>
 <tr>
+<td><a href="#PENDING_WHITELIST_RELEASE">PENDING_WHITELIST_RELEASE</a></td>
 <td><a href="#PRIMARY_ADDRESS_MATCH">PRIMARY_ADDRESS_MATCH</a></td>
+</tr>
+<tr>
 <td><a href="#PURGED_HEADERS_CLIENT">PURGED_HEADERS_CLIENT</a></td>
-</tr>
-<tr>
 <td><a href="#PURGED_HEADERS_DELIVERY">PURGED_HEADERS_DELIVERY</a></td>
+</tr>
+<tr>
 <td><a href="#PURGED_HEADERS_SERVER">PURGED_HEADERS_SERVER</a></td>
-</tr>
-<tr>
 <td><a href="#RECIPIENT_DELIMITER">RECIPIENT_DELIMITER</a></td>
+</tr>
+<tr>
 <td><a href="#RECIPIENT_HEADER">RECIPIENT_HEADER</a></td>
-</tr>
-<tr>
 <td><a href="#RESPONSE_DIR">RESPONSE_DIR</a></td>
+</tr>
+<tr>
 <td><a href="#SENDER_TEMPLATE_VARS">SENDER_TEMPLATE_VARS</a></td>
-</tr>
-<tr>
 <td><a href="#SENDMAIL_PROGRAM">SENDMAIL_PROGRAM</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPAUTH_PASSWORD">SMTPAUTH_PASSWORD</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPAUTH_USERNAME">SMTPAUTH_USERNAME</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPHOST">SMTPHOST</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPSSL">SMTPSSL</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPSSL_CERTFILE">SMTPSSL_CERTFILE</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPSSL_KEYFILE">SMTPSSL_KEYFILE</a></td>
+</tr>
+<tr>
 <td><a href="#SMTP_MAX_SESSIONS_PER_CONNECTION">SMTP_MAX_SESSIONS_PER_CONNECTION</a></td>
-</tr>
-<tr>
 <td><a href="#SUMMARY_HEADERS">SUMMARY_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TAGS_CONFIRM">TAGS_CONFIRM</a></td>
-</tr>
-<tr>
 <td><a href="#TAGS_DATED">TAGS_DATED</a></td>
+</tr>
+<tr>
 <td><a href="#TAGS_KEYWORD">TAGS_KEYWORD</a></td>
-</tr>
-<tr>
 <td><a href="#TAGS_SENDER">TAGS_SENDER</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_DIR">TEMPLATE_DIR</a></td>
-</tr>
-<tr>
 <td><a href="#TEMPLATE_DIR_MATCH_RECIPIENT">TEMPLATE_DIR_MATCH_RECIPIENT</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_DIR_MATCH_SENDER">TEMPLATE_DIR_MATCH_SENDER</a></td>
-</tr>
-<tr>
 <td><a href="#TEMPLATE_EMAIL_HEADERS">TEMPLATE_EMAIL_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_ENCODED_HEADERS">TEMPLATE_ENCODED_HEADERS</a></td>
-</tr>
-<tr>
 <td><a href="#TERSE_SUMMARY_HEADERS">TERSE_SUMMARY_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TMDAINJECT">TMDAINJECT</a></td>
-</tr>
-<tr>
 <td><a href="#USERNAME">USERNAME</a></td>
-<td><a href="#USEVIRTUALDOMAINS">USEVIRTUALDOMAINS</a></td>
 </tr>
 <tr>
+<td><a href="#USEVIRTUALDOMAINS">USEVIRTUALDOMAINS</a></td>
 <td><a href="#VIRTUALDOMAINS">VIRTUALDOMAINS</a></td>
-<td><a href="#X_TMDA_IN_SUBJECT">X_TMDA_IN_SUBJECT</a></td>
 </tr>
+<tr>
+<td><a href="#X_TMDA_IN_SUBJECT">X_TMDA_IN_SUBJECT</a></td>
 </table>
 
 <dl>
@@ -1172,6 +1174,25 @@ Example:
 <br><br>
 No default
 <dt><hr>
+<a name="PENDING_WHITELIST_RELEASE"><h4>PENDING_WHITELIST_RELEASE</h4></a>
+<dd>
+An option detailing the action taken when 'Whitelist' is the
+current action in tmda-pending or tmda-cgi
+<br><br>
+Available options:
+<br><br>
+0 - 'Whitelist' does not release any messages, only appends
+<blockquote>
+    the envelope sender to PENDING_WHITELIST_APPEND
+</blockquote>
+<br>
+1 - 'Whitelist' releases the current message and also appends
+<blockquote>
+    the envelope sender to PENDING_WHITELIST_APPEND
+</blockquote>
+<br>
+Default is 1
+<dt><hr>
 <a name="PRIMARY_ADDRESS_MATCH"><h4>PRIMARY_ADDRESS_MATCH</h4></a>
 <dd>
 An integer which controls how closely the address in the
@@ -1581,6 +1602,8 @@ tmda-sendmail and tmda-ofmipd):
       Message-ID field if the incoming message lacks one.
 </blockquote>
 <br>
+TMDAINJECT is looked for in the environment first.
+<br><br>
 Examples:
 <br><br>
 <code>TMDAINJECT = "i"</code><br>
